end of day: dealing with how to return distance matrix results from callback function to larger function

--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -1,4 +1,7 @@
 <div class="container">
   {{new-search createMap = "createMap"}}
   <div class="map-display"></div>
+  {{#if distanceMatrixResults}}
+    {{distance-matrix distanceMatrixResults}}
+  {{/if}}
 </div>
