display markers for all homes in database on front page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -44,8 +44,8 @@
   color: lightgray;
   opacity: .8;
   position: fixed;
-  right: 15%;
-  top: 22%;
+  right: 20px;
+  top: 20px;
 }
 .modal-close:hover {
   opacity: 1;
