--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  {{new-search createMap = "createMap"}}
+  {{new-search createMap = "createMap" houses=houses}}
   <div class="map-display"></div>
   {{#if distanceMatrixResults}}
     {{distance-matrix distanceMatrixResults}}
