--- a/app/templates/components/new-search.hbs
+++ b/app/templates/components/new-search.hbs
@@ -1,11 +1,1 @@
-<form>
-  <div class="form-group">
-    <label for="latitude">Latitude:</label>
-    {{input value=latitude id="latitude" class="form-control"}}
-  </div>
-  <div class="form-group">
-    <label for="longitude">Longitude:</label>
-    {{input value=longitude id="longitude" class="form-control"}}
-  </div>
-  <button class="btn" {{action 'createMap'}}>Search</button>
-</form>
+<button class="btn" {{action 'createMap' houses}}>Display Map</button>
