--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,6 @@
+
 {{#each model as |house|}}
-  <div class="house-tile">
+  <div class="house-tile" id= house.id>
     {{house-tile house=house}}
   </div>
 {{/each}}
