--- a/app/templates/components/house-tile.hbs
+++ b/app/templates/components/house-tile.hbs
@@ -3,4 +3,4 @@
 {{/link-to}}
 <h3>{{house.address}}</h3>
 <h5>{{bed-display house.beds}} | {{bath-display house.baths}} | {{house.sqft}} sqft</h5>
-<h4>For Sale: ${{house.price}}</h4>
+<h4>For Sale: ${{format-money house.price}}</h4>
