display house map on house tile

--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  {{tile-search createMap = "createMap"}}
+  {{tile-search createMap = "createMap" house=house}}
   <div class="map-display"></div>
   {{#if distanceMatrixResults}}
     {{distance-matrix distanceMatrixResults}}
