--- a/app/templates/components/tile-search.hbs
+++ b/app/templates/components/tile-search.hbs
@@ -1,1 +1,1 @@
-<button class="btn" {{action 'createMap'}}>Display Map</button>
+<button class="btn" {{action 'createMap' house}}>Display Map</button>
