--- a/app/templates/show.hbs
+++ b/app/templates/show.hbs
@@ -5,4 +5,5 @@
   <h5>{{bed-display model.beds}} | {{bath-display model.baths}} | {{model.sqft}} sqft</h5>
   <h4>For Sale: ${{format-money model.price}}</h4>
   <p>Lots of Details! Details Details Details!</p>
+  {{google-map house=model}}
 {{/modal-dialog}}
