--- a/app/templates/components/tile-search.hbs
+++ b/app/templates/components/tile-search.hbs
@@ -1,1 +1,3 @@
-<button class="btn" {{action 'createMap' house}}>Display Map</button>
+<br>
+<button class="btn btn-primary" {{action 'createMap' house}}>Display Map</button>
+<br>
