--- a/app/templates/components/main-map.hbs
+++ b/app/templates/components/main-map.hbs
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="main-map">
   {{new-search createMap = "createMap" houses=houses}}
+  <br>
   <div class="map-display"></div>
 </div>
