Create favorites route & list, create addToFavorites() & removeFromFavorites() methods with heart glyphicons

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,6 +12,7 @@
         <span class="icon-bar"></span>
       </button>
       {{#link-to 'index' class="navbar-brand"}}House Search{{/link-to}}
+      {{#link-to 'favorite-houses' class="navbar-brand"}}Favorite Houses{{/link-to}}
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
