--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,5 @@
 {{#each model as |house|}}
-  <div class="house-tile" id= house.id>
+  <div class="house-tile">
     {{house-tile house=house}}
   </div>
 {{/each}}
