--- a/app/templates/components/house-tile.hbs
+++ b/app/templates/components/house-tile.hbs
@@ -1,12 +1,14 @@
 {{#link-to 'show' house}}
 <img src= {{house.image}} alt= {{house.address}}>
 {{/link-to}}
-{{#link-to 'show' house}}
 <div class="house-tile-image-overlay">
   <div class="image-overlay-content">
-    <h3>{{house.address}}</h3>
+    {{#link-to 'show' house}}
+    <h5>House For Sale</h5>
+    <h3>${{format-money house.price}}</h3>
     <h5>{{bed-display house.beds}} | {{bath-display house.baths}} | {{house.sqft}} sqft</h5>
-    <h4>For Sale: ${{format-money house.price}}</h4>
+    <h4 class="gray">{{house.address}}</h4>
+    {{/link-to}}
   </div>
   <div class="heart">
     {{#if inList}}
@@ -16,4 +18,3 @@
     {{/if}}
   </div>
 </div>
-{{/link-to}}
