Fix linking on heart on house-tiles, add index header image

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default">
   <div class="hero-unit">
-    <h1 class="main-title">House Search</h1>
+    <h1 class="main-title">Houses for Sale</h1>
   </div>
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -11,7 +11,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {{#link-to 'index' class="navbar-brand"}}House Search{{/link-to}}
+      {{#link-to 'index' class="navbar-brand"}}Home{{/link-to}}
       {{#link-to 'favorite-houses' class="navbar-brand"}}Favorite Houses{{/link-to}}
     </div>
 
