--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,22 +8,24 @@
 
 .hero-unit {
   background-color:steelblue;
-  background-size:length;
   height:25vh;
   text-align: center;
+  background-image: url("/images/index-pic.jpg");
+  background-size: cover;
+  background-position: center;
   h1 {
     margin-top: 0;
     color: white;
     opacity: .9;
     font-size: 6em;
-    padding-top: 5%;
+    padding-top: 75px;
   }
 }
 
 
 @media screen and (max-width: 866px) {
   .hero-unit h1 {
-    padding-top: 0;
+    // padding-top: 0;
     font-size: 4.3em;
   }
 }
@@ -37,17 +39,14 @@
     height: 400px;
   }
   .house-tile-image-overlay {
-    color: white;
-    background: rgba(0,0,0,0.25);
-    padding-left: 20px;
-    margin-top: -400px;
     width: 100%;
     height: 400px;
     position: relative;
     .image-overlay-content {
+      color: white;
       position: absolute;
+      padding-left: 20px;
       bottom: 0;
-      // -webkit-text-stroke: .5px black;
       a {
         text-decoration:none;
         color: white;
@@ -58,6 +57,7 @@
       top: 5px;
       right: 10px;
       font-size: 40px;
+      color: #FFFFFF;
     }
   }
 }
