Add styling to index & favorite-houses & modal to fit more with Zillow

--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -1,10 +1,12 @@
 <div class="container">
-  {{tile-search createMap = "createMap" house=house}}
+  <div class="tile-search">
+    {{tile-search createMap = "createMap" house=house}}
+  </div>
   <br>
   <div class="map-display col-md-8"></div>
   <div class="map-key col-md-3">
     <ul>
-      <li><strong>Key</strong></li>
+      <li class="key-title"><strong>Key</strong></li>
       <hr>
       <li class='key-li'><img src="images/house-emoji.png" class="key-icon"> Your Future Home!</li>
       <li class='key-li'><img src="images/school-emoji.png" class="key-icon"> Schools</li>
