--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,9 +1,15 @@
 @import "ember-modal-dialog/ember-modal-structure";
 @import "ember-modal-dialog/ember-modal-appearance";
 
+body {
+  font-family: serif;
+}
+
+
 .map-display {
   height: 600px;
   width: 600px;
+  margin-bottom: 150px;
 }
 
 .hero-unit {
@@ -16,12 +22,20 @@
   h1 {
     margin-top: 0;
     color: white;
-    opacity: .9;
     font-size: 6em;
-    padding-top: 75px;
+    height: 100%;
+    padding-top: 100px;
+    background: rgba(0,0,0,0.45);
   }
 }
 
+.navbar {
+  .navbar-brand {
+    color: #000000;
+    margin-right: 50px;
+    font-size: 18pt;
+  }
+}
 
 @media screen and (max-width: 866px) {
   .hero-unit h1 {
@@ -44,6 +58,8 @@
     position: relative;
     .image-overlay-content {
       color: white;
+      background: rgba(0,0,0,0.5);
+      width: 100%;
       position: absolute;
       padding-left: 20px;
       bottom: 0;
@@ -68,8 +84,12 @@
   overflow-y: auto;
   margin: auto;
   .inside-modal {
-    max-width: 90%;
-    margin: 30px auto 10px;
+    max-width: 100%;
+    margin-left: -9.5px;
+    margin-top: -9.5px;
+    .content {
+      margin: 70px;
+    }
     .key-li {
       list-style-type: none;
       margin-left: 0;
@@ -79,8 +99,15 @@
         width: 30px;
       }
     }
-    img {
-      width: 100%;
+    .row {
+      margin-top: 25px;
+      .on-sale {
+        margin-top: 25px;
+        margin-left: 30px;
+      }
+      .price {
+        margin-left: 30px;
+      }
     }
   }
 }
@@ -92,9 +119,14 @@
   right: 20px;
   top: 20px;
 }
+
 .modal-close:hover {
   opacity: 1;
   cursor: pointer;
+}
+
+.key-title {
+  font-size: 15pt;
 }
 
 .key-icon {
@@ -102,22 +134,41 @@
   display: inline-block;
   margin-right: 5px;
 }
+
 ul {
   list-style: none;
+}
+
+.tile-search {
+  .btn-primary {
+    font-size: 15pt;
+    margin-left: -15px;
+  }
 }
 
 
 
 .main-map {
-  max-width: 80%;
+  max-width: 90%;
   margin: auto;
+  margin-top: 50px;
   .btn {
-    margin-left: 5%;
+    font-size: 20pt;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   .map-display {
-    width: 90%;
+    width: 95%;
     margin: auto;
+    margin-bottom: 150px;
   }
+}
+
+.favorite-title {
+  text-align: center;
+  font-size: 45pt;
+  margin-bottom: 50px;
 }
 
 .fa:hover {
