--- a/app/templates/show.hbs
+++ b/app/templates/show.hbs
@@ -2,10 +2,19 @@
   <span class="glyphicon glyphicon-remove modal-close" {{action 'goBackToList'}}></span>
   <div class="inside-modal">
     <img src= {{model.image}} alt= {{model.address}}>
-    <h3>{{model.address}}</h3>
-    <h5>{{bed-display model.beds}} | {{bath-display model.baths}} | {{model.sqft}} sqft</h5>
-    <h4>For Sale: ${{format-money model.price}}</h4>
-    <p>Lots of Details! Details Details Details!</p>
-    {{google-map house=model}}
+    <div class="content">
+      <div class="row">
+        <div class="col-xs-8">
+          <h2>{{model.address}}</h2>
+          <h3><strong>{{bed-display model.beds}} | {{bath-display model.baths}} | {{model.sqft}} sqft</strong></h3>
+        </div>
+        <div class="col-xs-3 col-xs-offset-1">
+          <h3 class="on-sale"><strong>ON SALE</strong></h3>
+          <h3 class="price">${{format-money model.price}}</h3>
+        </div>
+      </div>
+      <h4>Lots of Details! Details Details Details!</h4>
+      {{google-map house=model}}
+    </div>
   </div>
 {{/modal-dialog}}
