Slight changes to index page to format house details more like Zillow, start formatting favorite-house-tile

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -67,6 +67,13 @@ body {
         text-decoration:none;
         color: white;
       }
+      .details {
+        margin-top: 28px;
+        margin-left: -175px;
+      }
+      .gray {
+        margin-left: -48px;
+      }
     }
     .heart {
       position: absolute;
