--- a/app/templates/show.hbs
+++ b/app/templates/show.hbs
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-xs-8">
           <h2>{{model.address}}</h2>
-          <h3><strong>{{bed-display model.beds}} | {{bath-display model.baths}} | {{model.sqft}} sqft</strong></h3>
+          <h3><strong>{{bed-display model.beds}} &#9679; {{bath-display model.baths}} &#9679; {{model.sqft}} sqft</strong></h3>
         </div>
         <div class="col-xs-3 col-xs-offset-1">
           <h3 class="on-sale"><strong>ON SALE</strong></h3>
