--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -14,28 +14,9 @@
       {{#link-to 'index' class="navbar-brand"}}Home{{/link-to}}
       {{#link-to 'favorite-houses' class="navbar-brand"}}Favorite Houses{{/link-to}}
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <!-- <ul class="nav navbar-nav navbar-right">
-        <li>{{#link-to 'admin'}}Admin{{/link-to}}</li>
-        <li>{{#link-to 'about'}}About{{/link-to}}</li>
-        <li>{{#link-to 'cart'}}<div class="cart-total-display">{{cartTotalDisplay}}</div><span class="glyphicon glyphicon-shopping-cart"></span>{{/link-to}}</li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Goats <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li>{{#link-to 'pet'}}Pet{{/link-to}}</li>
-            <li>{{#link-to 'dairy'}}Dairy{{/link-to}}</li>
-            <li>{{#link-to 'sire'}}Sire{{/link-to}}</li>
-            <li>{{#link-to 'mohair'}}Mohair{{/link-to}}</li>
-            <li>{{#link-to 'yard'}}Yard{{/link-to}}</li>
-          </ul>
-        </li>
-      </ul> -->
-    </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div class="container">
+<div>
   {{outlet}}
 </div>
 <br>
