--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -1,10 +1,10 @@
-<div class="container">
-  <div class="tile-search">
-    {{tile-search createMap = "createMap" house=house}}
-  </div>
-  <br>
-  <div class="map-display col-md-8"></div>
-  <div class="map-key col-md-3">
+<div class="tile-search">
+  {{tile-search createMap = "createMap" house=house}}
+</div>
+<br>
+<div class="row">
+  <div class="map-display col-xs-5"></div>
+  <div class="map-key col-xs-3">
     <ul>
       <li class="key-title"><strong>Key</strong></li>
       <hr>
@@ -13,7 +13,7 @@
       <li class='key-li'><img src="images/grocery-emoji.png" class="key-icon"> Grocery Stores</li>
     </ul>
   </div>
-  {{#if distanceMatrixResults}}
-    {{distance-matrix distanceMatrixResults}}
-  {{/if}}
 </div>
+<!-- {{#if distanceMatrixResults}}
+  {{distance-matrix distanceMatrixResults}}
+{{/if}} -->
