--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,7 +18,8 @@
     color: white;
     opacity: .9;
     font-size: 6em;
-    padding-top: 75px;
+    padding-top: 80px;
+    text-shadow: 2px 2px #626262;
   }
 }
 
