--- a/app/templates/components/favorite-house-tile.hbs
+++ b/app/templates/components/favorite-house-tile.hbs
@@ -1,9 +1,13 @@
-{{#each favoriteHouses.favoriteHousesList as |favoriteHouse|}}
-  {{#link-to 'show' favoriteHouse}}
-    <img src= {{favoriteHouse.image}} alt= {{favoriteHouse.address}}>
-  {{/link-to}}
-  <h3>{{favoriteHouse.address}}</h3>
-  <h5>{{bed-display favoriteHouse.beds}} &#9679; {{bath-display favoriteHouse.baths}} &#9679; {{favoriteHouse.sqft}} sqft</h5>
-  <h4>For Sale: ${{format-money favoriteHouse.price}}</h4>
-  <span {{action "removeFromFavorites" favoriteHouse}} class="fa fa-heart"></span>
+{{#each favoriteHouses.favoriteHousesList as |house|}}
+  {{#if (gte favoriteHouses.favoriteHousesList.length 2)}}
+    <div class="col-xs-6">
+      <div class="house-tile">
+        {{house-tile house=house}}
+      </div>
+    </div>
+  {{else}}
+    <div class="house-tile">
+      {{house-tile house=house}}
+    </div>
+  {{/if}}
 {{/each}}
