--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,16 +16,16 @@ body {
   background-color:steelblue;
   height:25vh;
   text-align: center;
-  background-image: url("/images/index-pic.jpg");
+  background-image: url("/images/hero-img.jpg");
   background-size: cover;
   background-position: center;
   h1 {
     margin-top: 0;
     color: white;
-    font-size: 6em;
+    font-size: 8em;
     height: 100%;
     padding-top: 100px;
-    background: rgba(0,0,0,0.45);
+    background: rgba(0,0,0,0.3);
   }
 }
 
@@ -40,7 +40,7 @@ body {
 @media screen and (max-width: 866px) {
   .hero-unit h1 {
     // padding-top: 0;
-    font-size: 4.3em;
+    font-size: 6em;
   }
 }
 
@@ -50,11 +50,13 @@ body {
   margin: 30px auto;
   img {
     width: 100%;
-    height: 400px;
+    max-width: 725px;
+    height: 450px;
   }
   .house-tile-image-overlay {
     width: 100%;
-    height: 400px;
+    max-width: 725px;
+    height: 450px;
     position: relative;
     .image-overlay-content {
       color: white;
