added sorting to results

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -188,3 +188,8 @@ ul {
 //   color: gray;
 //   -webkit-text-stroke: .5px black;
 // }
+
+.sorting{
+  padding-right: 15%;
+  text-align: right;
+}
