--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,8 +1,4 @@
-{{#each model as |house|}}
-  <div class="house-tile">
-    {{house-tile house=house}}
-  </div>
-{{/each}}
+{{house-list houses=model}}
 
 <hr>
 {{main-map houses=model}}
