Create service to catalog houses-bought, create computed property to display SOLD sign on house modal when bought/sold

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,6 +7,7 @@
     <div class="navbar-header">
       {{#link-to 'index' class="navbar-brand"}}Home{{/link-to}}
       {{#link-to 'favorite-houses' class="navbar-brand"}}Favorite Houses{{/link-to}}
+      {{#link-to "houses-bought" class="navbar-brand"}}Houses Bought{{/link-to}}
     </div>
   </div><!-- /.container-fluid -->
 </nav>
