--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -184,7 +184,20 @@ ul {
   cursor: pointer;
   font-size: 1.5em;
 }
-// .gray {
-//   color: gray;
-//   -webkit-text-stroke: .5px black;
-// }
+.sold-out {
+  margin-top: -315px;
+  margin-bottom: 200px;
+  padding-left: 20px;
+  color: red;
+  -webkit-text-stroke: 1px black;
+  h1 {
+    font-size: 10em;
+    text-align: center;
+  }
+}
+
+.btn-danger {
+  margin-left: 25px;
+  margin-top: 50px;
+  font-size: 15pt;
+}
