Add computed property for sold to index house-tile

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -53,6 +53,9 @@ body {
     max-width: 725px;
     height: 450px;
   }
+  a {
+    text-decoration: none;
+  }
   .house-tile-image-overlay {
     width: 100%;
     max-width: 725px;
