--- a/app/templates/components/house-tile.hbs
+++ b/app/templates/components/house-tile.hbs
@@ -1,23 +1,23 @@
 <div class="house-tile-image-overlay">
   {{#link-to 'show' house}}
-  <img src= {{house.image}} alt= {{house.address}}>
-  {{sold-out house=house}}
-  <div class="image-overlay-content">
-    <div class="row">
-      <h2 class="col-xs-4">${{format-money house.price}}</h2>
-      <h4 class="col-xs-5 col-xs-offset details">{{bed-display house.beds}} &#9679; {{bath-display house.baths}} &#9679; {{house.sqft}} sqft</h4>
+    <img src= {{house.image}} alt= {{house.address}}>
+    {{sold-out house=house}}
+    <div class="image-overlay-content">
+      <div class="row">
+        <h2 class="col-xs-4">${{format-money house.price}}</h2>
+        <h4 class="col-xs-5 col-xs-offset details">{{bed-display house.beds}} &#9679; {{bath-display house.baths}} &#9679; {{house.sqft}} sqft</h4>
+      </div>
+      <div class="row">
+        <h4 class="col-xs-3">For Sale</h4>
+        <h4 class="gray col-xs-7 col-xs-offset-1">{{house.address}}</h4>
+      </div>
     </div>
-    <div class="row">
-      <h4 class="col-xs-3">For Sale</h4>
-      <h4 class="gray col-xs-7 col-xs-offset-1">{{house.address}}</h4>
-    </div>
-  </div>
   {{/link-to}}
   <div class="heart">
     {{#if inList}}
-    <span {{action "removeFromFavorites" house}} class="fa fa-heart"></span>
+      <span {{action "removeFromFavorites" house}} class="fa fa-heart heart-icon"></span>
     {{else}}
-    <span {{action "addToFavorites" house}} class="fa fa-heart-o"></span>
+      <span {{action "addToFavorites" house}} class="fa fa-heart-o heart-icon"></span>
     {{/if}}
   </div>
 </div>
