--- a/app/templates/components/new-search.hbs
+++ b/app/templates/components/new-search.hbs
@@ -1,1 +1,1 @@
-<button class="btn btn-primary" {{action 'createMap' houses}}>Display Map</button>
+<button {{action 'createMap' houses}} class="btn btn-primary">Display Map</button>
