Adjust margin for btn-primary in house modal, update README.md with more specific sections, still need to fill out README.md

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -140,6 +140,9 @@ body {
     .content {
       margin: 70px;
     }
+    .tile-search {
+      margin-left: 15px;
+    }
     img {
       width: 780px;
     }
