--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,6 +8,7 @@
       {{#link-to 'index' class="navbar-brand"}}Home{{/link-to}}
       {{#link-to 'favorite-houses' class="navbar-brand"}}Favorite Houses{{/link-to}}
       {{#link-to "houses-bought" class="navbar-brand"}}Houses Bought{{/link-to}}
+      {{#link-to "admin" class="navbar-brand"}}Admin{{/link-to}}
     </div>
   </div><!-- /.container-fluid -->
 </nav>
