--- a/app/templates/components/bought-house-tile.hbs
+++ b/app/templates/components/bought-house-tile.hbs
@@ -1,5 +1,5 @@
 {{#each housesBought.boughtHousesList as |boughtHouse|}}
-  <ul class="houses-bought-list">
+  <ul class="houses-list">
     <li>{{boughtHouse.address}}: ${{format-money boughtHouse.price}}</li>
   </ul>
 {{/each}}
