--- a/app/templates/components/update-house.hbs
+++ b/app/templates/components/update-house.hbs
@@ -1,1 +1,52 @@
-{{yield}}
+{{#if updateHouseForm}}
+  <div class="update-house">
+    <form class="form-group">
+      <h2>Update House</h2>
+      <div>
+        <label>Address</label>
+        {{input value=house.address id="house.address" class="form-control"}}
+      </div>
+      <div class="row">
+        <div class="col-xs-4">
+          <label>Latitude</label>
+          {{input value=house.latitude id="house.latitude" class="form-control"}}
+        </div>
+        <div class="col-xs-4">
+          <label>Longitude</label>
+          {{input value=house.longitude id="house.longitude" class="form-control"}}
+        </div>
+        <div class="col-xs-4">
+          <label>Neighborhood Name</label>
+          {{input value=house.neighborhood id="house.neighborhood" class="form-control"}}
+        </div>
+      </div>
+      <div>
+        <label>Image URL</label>
+        {{input value=house.image id="house.image" class="form-control"}}
+      </div>
+      <div class="row">
+        <div class="col-xs-6">
+          <label>Number of Beds</label>
+          {{input value=house.beds id="house.beds" class="form-control"}}
+        </div>
+        <div class="col-xs-6">
+          <label>Number of Baths</label>
+          {{input value=house.baths id="house.baths" class="form-control"}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-6">
+          <label>Sqft.</label>
+          {{input value=house.sqft id="house.sqft" class="form-control"}}
+        </div>
+        <div class="col-xs-6">
+          <label>Price</label>
+          {{input value=house.price id="house.price" class="form-control"}}
+        </div>
+      </div>
+      <button {{action "updateHouse" house}} class="btn btn-success">Save</button>
+    </form>
+  </div>
+{{else}}
+  <span {{action "showUpdateHouseForm"}} class="glyphicon glyphicon-pencil col-xs-3"></span>
+{{/if}}
