Style update-house form to show properly, switch order of delete & update glyphicons on admin for each house

--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -1,15 +1,15 @@
 <h1 class="page-title">Administrator</h1>
 {{new-house saveNewHouse="saveNewHouse"}}
 
-<h2 class="page-title">All Houses</h2>
+<h2 class="page-subtitle">All Houses</h2>
 {{#each model as |house|}}
   <ul class="houses-list">
     <div class="row">
       <li>
         <span class="col-xs-8">{{house.address}}</span>
         <div class="col-xs-4">
-          {{update-house updateHouse="updateHouse" house=house}}
           <span {{action "deleteHouse" house}} class="glyphicon glyphicon-remove col-xs-3"></span>
+          {{update-house updateHouse="updateHouse" house=house}}
         </div>
       </li>
     </div>
