--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -223,11 +223,24 @@ form {
   }
 }
 
+.update-house {
+  width: 1100px;
+  margin-left: -785px;
+  margin-top: 50px;
+  margin-bottom: -50px;
+}
+
 //////////////////////////////////// Favorites & Houses Bought  & Admin Styling ////////////////////////////////////
 .page-title {
   text-align: center;
   font-size: 45pt;
   margin-bottom: 50px;
+}
+
+.page-subtitle {
+  margin-bottom: 85px;
+  font-size: 35pt;
+  text-align: center;
 }
 
 .houses-list {
@@ -236,6 +249,7 @@ form {
   li {
     font-size: 18pt;
     margin-left: 75px;
+    margin-top: -35px;
   }
 }
 
