--- a/app/templates/components/update-house.hbs
+++ b/app/templates/components/update-house.hbs
@@ -9,11 +9,11 @@
       <div class="row">
         <div class="col-xs-4">
           <label>Latitude</label>
-          {{input value=house.latitude id="house.latitude" class="form-control"}}
+          {{input value=house.latitude id="house.latitude" class="form-control" type="number"}}
         </div>
         <div class="col-xs-4">
           <label>Longitude</label>
-          {{input value=house.longitude id="house.longitude" class="form-control"}}
+          {{input value=house.longitude id="house.longitude" class="form-control" type="number"}}
         </div>
         <div class="col-xs-4">
           <label>Neighborhood Name</label>
@@ -27,21 +27,21 @@
       <div class="row">
         <div class="col-xs-6">
           <label>Number of Beds</label>
-          {{input value=house.beds id="house.beds" class="form-control"}}
+          {{input value=house.beds id="house.beds" class="form-control" type="number"}}
         </div>
         <div class="col-xs-6">
           <label>Number of Baths</label>
-          {{input value=house.baths id="house.baths" class="form-control"}}
+          {{input value=house.baths id="house.baths" class="form-control" type="number"}}
         </div>
       </div>
       <div class="row">
         <div class="col-xs-6">
           <label>Sqft.</label>
-          {{input value=house.sqft id="house.sqft" class="form-control"}}
+          {{input value=house.sqft id="house.sqft" class="form-control" type="number"}}
         </div>
         <div class="col-xs-6">
           <label>Price</label>
-          {{input value=house.price id="house.price" class="form-control"}}
+          {{input value=house.price id="house.price" class="form-control" type="number"}}
         </div>
       </div>
       <button {{action "updateHouse" house}} class="btn btn-success">Save</button>
