Add hospital emoji to key list on house-modal, fix bug from README.md

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -76,6 +76,10 @@ body {
   ul {
     list-style: none;
   }
+  .grocery {
+    margin-top: 12px;
+    margin-bottom: 3.5px;
+  }
 }
 
 ////////////////////////////////////// House Tile Styling //////////////////////////////////////
