--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -8,9 +8,10 @@
     <ul>
       <li class="key-title"><strong>Key</strong></li>
       <hr>
-      <li class='key-li'><img src="images/house-emoji.png" class="key-icon"> Your Future Home!</li>
-      <li class='key-li'><img src="images/school-emoji.png" class="key-icon"> Schools</li>
-      <li class='key-li'><img src="images/grocery-emoji.png" class="key-icon"> Grocery Stores</li>
+      <li class='key-li'><img src="images/house-emoji.png" class="key-icon">Your Future Home!</li>
+      <li class='key-li'><img src="images/school-emoji.png" class="key-icon">School</li>
+      <li class='key-li grocery'><img src="images/grocery-emoji.png" class="key-icon grocery">Grocery Store</li>
+      <li class='key-li'><img src="images/hospital-emoji.png" class="key-icon">Hospital</li>
     </ul>
   </div>
 </div>
