allow user to buy a house if their down payment is at least 3 percent of house price and their salary is 20 percent of house price

--- a/app/templates/components/inside-modal.hbs
+++ b/app/templates/components/inside-modal.hbs
@@ -15,8 +15,8 @@
       </div>
     </div>
     {{#if showForm}}
-    {{buy-form house=house}}
+    {{buy-form house=house buyHouse="buyHouse"}}
     {{/if}}
-    {{google-map house=house}}
+    <!-- {{google-map house=house}} -->
   </div>
 </div>
