added mortgage calculator

--- a/app/templates/components/house-tile.hbs
+++ b/app/templates/components/house-tile.hbs
@@ -6,6 +6,8 @@
     <div class="row">
       <h2 class="col-xs-4">${{format-money house.price}}</h2>
       <h4 class="col-xs-5 col-xs-offset details">{{bed-display house.beds}} &#9679; {{bath-display house.baths}} &#9679; {{house.sqft}} sqft</h4>
+      <h5>Monthly Payment:</h5>
+      ${{mortgagePayment}}
     </div>
     <div class="row">
       <h4 class="col-xs-3">For Sale</h4>
