--- a/app/templates/components/house-tile.hbs
+++ b/app/templates/components/house-tile.hbs
@@ -5,13 +5,12 @@
     <div class="image-overlay-content">
       <div class="row">
         <h2 class="col-xs-4">${{format-money house.price}}</h2>
-        <h4 class="col-xs-5 col-xs-offset details">{{bed-display house.beds}} &#9679; {{bath-display house.baths}} &#9679; {{house.sqft}} sqft</h4>
-        <div class="row">
-          <h4 class="col-xs-3">For Sale</h4>
-          <h4 class="gray col-xs-7 col-xs-offset-1">{{house.address}}</h4>
-        </div>
-        <h5>Monthly Payment:</h5>
-        ${{mortgagePayment}}
+        <h4 class="col-xs-5 details">{{bed-display house.beds}} &#9679; {{bath-display house.baths}} &#9679; {{house.sqft}} sqft</h4>
+      </div>
+      <h3>{{house.address}}</h3>
+      <div class="row">
+        <h4 class="col-xs-3">Monthly Payment</h4>
+        <h4 class="col-xs-7 col-xs-offset-1">${{format-money mortgagePayment}}</h4>
       </div>
     </div>
   {{/link-to}}
