Create new google api key in vendor folder, add styling to application form & houses bought page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -209,7 +209,9 @@ body {
 }
 
 #buy-house-btn {
-  margin-left: -2%;
+  margin-left: 0;
+  margin-top: 10px;
+  margin-bottom: 35px;
 }
 
 ////////////////////////////////////// Forms Styling //////////////////////////////////////
@@ -238,6 +240,10 @@ form {
   margin-bottom: -50px;
 }
 
+#buy-house-form {
+  margin-left: 0;
+}
+
 //////////////////////////////////// Favorites & Houses Bought  & Admin Styling ////////////////////////////////////
 .page-title {
   text-align: center;
@@ -254,13 +260,18 @@ form {
 .houses-list {
   list-style: none;
   margin-bottom: 50px;
-  li {
+  h2 {
     font-size: 18pt;
     margin-left: 75px;
-    margin-top: -35px;
+    margin-top: 75px;
   }
   .glyphicon-remove {
     color: #B22222;
+  }
+  img {
+    border-radius: 50%;
+    width: 250px;
+    height: 200px;
   }
 }
 
