--- a/app/templates/components/bought-house-tile.hbs
+++ b/app/templates/components/bought-house-tile.hbs
@@ -1,5 +1,8 @@
 {{#each housesBought.boughtHousesList as |boughtHouse|}}
-  <ul class="houses-list">
-    <li>{{boughtHouse.address}}: ${{format-money boughtHouse.price}}</li>
-  </ul>
+  <div class="houses-list row">
+    <img src={{boughtHouse.image}} alt={{boughtHouse.address}} class="col-xs-4"/>
+    <div class="col-xs-8">
+      <h2>{{boughtHouse.address}}: ${{format-money boughtHouse.price}}</h2>
+    </div>
+  </div>
 {{/each}}
