--- a/app/templates/components/buy-form.hbs
+++ b/app/templates/components/buy-form.hbs
@@ -1,12 +1,15 @@
 <h2>Application for your New Home</h2>
-<form>
-  <div class="form-group">
-    <label for="first_name">First Name:</label>
-    {{input value=first_name id="first_name" class="form-control"}}
-  </div>
-  <div class="form-group">
-    <label for="last_name">Last Name:</label>
-    {{input value=last_name id="last_name" class="form-control"}}
+<hr>
+<form id="buy-house-form">
+  <div class="row">
+    <div class="form-group col-xs-6">
+      <label for="first_name">First Name</label>
+      {{input value=first_name id="first_name" class="form-control"}}
+    </div>
+    <div class="form-group col-xs-6">
+      <label for="last_name">Last Name</label>
+      {{input value=last_name id="last_name" class="form-control"}}
+    </div>
   </div>
   <div class="form-group">
     <label for="down_payment">How much can your down payment be?</label>
@@ -18,3 +21,4 @@
   </div>
   <button {{action 'buyHouse' house}} class="btn btn-danger" id="buy-house-btn">Apply Now!</button>
 </form>
+<hr>
