--- a/app/templates/houses-bought.hbs
+++ b/app/templates/houses-bought.hbs
@@ -1,2 +1,4 @@
-<h1 class="page-title">Houses Bought</h1>
-{{bought-house-tile}}
+<div class="container">
+  <h1 class="page-title">Houses Bought</h1>
+  {{bought-house-tile}}
+</div>
