--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default">
   <div class="hero-unit">
-    <h1 class="main-title">Houses for Sale</h1>
+    <h1 class="main-title">Epic Real Estate</h1>
   </div>
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
